--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "otp-generator": "^4.0.1"
   }
 }
